<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prueba de Funcionamiento</string>
    <string name="texto_bienvenida">Bienvenido a Rybak</string>
    <string name="mensaje_inicio">Bienvenidos Rybak, Continua una nueva aventura</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrate">REGISTRATE</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="iniciar_sesion_con_google">Iniciar sesión con google</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="registro">REGISTRO</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo Electrónico</string>
    <string name="repite_contrasena">Repita su Contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="terminos_y_condiciones">terminos y condiciones</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Iniciar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tienda">Mi tienda</string>
    <string name="inicio">Inicio</string>
    <string name="Catalogo">Catálogo</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="logout">Logout</string>
    <string name="gestion_admin">Gestion Admin</string>
    <string name="usuarios">Usuarios</string>
    <string name="navigation_drawer_open">Menú abierto</string>
    <string name="navigation_drawer_close">Menú Cerrado</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">imagen del producto</string>
    <string name="agregar_al_carrito">agregar al carrito</string>
    <string name="inicia_sesi_n_para_continuar">Inicia sesión para continuar</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="rybak">RYBAK</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="estad_sticas_y_reportes">Estadísticas y reportes</string>
    <string name="reporte_de_ventas">Reporte de Ventas</string>
    <string name="administrar_inventario">Administrar inventario</string>
    <string name="gesti_n_de_productos">Gestión de Productos</string>
    <string name="crear_editar_eliminar_usuarios">Crear, editar, eliminar usuarios</string>
    <string name="gesti_n_de_usuarios">Gestión de Usuarios</string>
    <string name="resumen_general_del_sistema">Resumen general del sistema</string>
    <string name="dashboard">Dashboard</string>
    <string name="panel_de_administrador">Panel de Administrador</string>
    <string name="explorar_productos_disponibles">Explorar productos disponibles</string>
    <string name="detalle_de_producto">Detalle de Producto</string>
    <string name="informaci_n_completa_del_producto">Información completa del producto</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="productos_seleccionados">Productos seleccionados</string>
    <string name="pasarela_de_pagos">Pasarela de Pagos</string>
    <string name="procesar_pagos_de_forma_segura">Procesar pagos de forma segura</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="configuraci_n_de_cuenta">Configuración de cuenta</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_tu_correo_para_enviarte_un_enlace_de_recuperaci_n">Ingresa tu correo para enviarte un enlace de recuperación</string>
    <string name="volver_al_login">Volver al login</string>
    <string name="perfil_de_vendedor">Perfil de Vendedor</string>
    <string name="informaci_n_y_configuraci_n_de_cuenta">Información y configuración de cuenta</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="ingresa_tus_datos">Ingresa tus datos:</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="ingresa_tu_apellido">Ingresa tu apellido</string>
    <string name="ingresa_tu_correo_electr_nico">Ingresa tu correo electrónico</string>
    <string name="ingresa_la_contrase_a">Ingresa la contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
</resources>