<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.auth.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rybak"
                android:textSize="44sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:padding="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/re_nombres"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/nombres"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/re_apellidos"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/re_correo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/re_contrasena"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/re_recontrasena"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/repite_contrasena"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_blue"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />

            <CheckBox
                android:id="@+id/check_terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terminos_y_condiciones"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="18dp" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/registrarse"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@drawable/style_btn_login"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/re_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta"
                android:textColor="@color/color_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>