<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rybak"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp" />

        <!-- BIENVENIDO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="8dp" />

        <!-- SUBTITULO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesi_n_para_continuar"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginBottom="20dp" />

        <!-- EMAIL -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/style_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_usuario" />

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/correo_electronico"
                android:textColor="@color/rojo"
                android:textColorHint="#888888" />
        </LinearLayout>

        <!-- PASSWORD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@drawable/style_edit_text"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:hint="@string/contrasena"
                android:textColor="@color/rojo"
                android:textColorHint="#888888" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_recuperar_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_marginTop="15dp" />

        <!-- BOTON LOGIN -->
        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/iniciar_sesion"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/style_btn_login"
            android:layout_marginTop="20dp" />

        <!-- GOOGLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion_con_google"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="10dp" />
        </LinearLayout>

        <!-- HUELLA -->
        <TextView
            android:id="@+id/tv_inhuella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_con_huella"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_marginTop="18dp" />

        <!-- REGISTRATE -->
        <TextView
            android:id="@+id/tv_registrate_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#2F80ED"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</ScrollView>