<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.RecuperarContrasenaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rybak"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:translationY="-130dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_contrasena"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_gravity="start"
            android:translationY="-85dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ingresa_tu_correo_para_enviarte_un_enlace_de_recuperaci_n"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:translationY="-80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_edit_text"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:translationY="-90dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_usuario" />

            <EditText
                android:id="@+id/et_email_recuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_recuperar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_btn_login"
            android:text="@string/recuperar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:translationY="-90dp" />

        <TextView
            android:id="@+id/tv_volver_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="VOLVER A INICIAR SESIÓN"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:translationY="-60dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>